external-crates/move/crates/move-compiler/tests/move_2024/matching/at_patterns_mut_ref.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/at_patterns_mut_ref.move:30:16
   │
30 │         match (x) {
   │                ^ Pattern 'Maybe::Just(_)' not covered

error[E01002]: unexpected token
   ┌─ tests/move_2024/matching/at_patterns_mut_ref.move:31:13
   │
31 │             _ @ Maybe::Just(_) => other,
   │             ^ Cannot use '_' as a binder in an '@' pattern

warning[W09002]: unused variable
   ┌─ tests/move_2024/matching/at_patterns_mut_ref.move:38:14
   │
38 │             (x @ Maybe::Nothing) | (x @ Maybe::Just(_)) => other,
   │              ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09002]: unused variable
   ┌─ tests/move_2024/matching/at_patterns_mut_ref.move:38:37
   │
38 │             (x @ Maybe::Nothing) | (x @ Maybe::Just(_)) => other,
   │                                     ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
